samples/_failures_safe/1761005939_907b63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_109a683c.c: In function ‘main’:
./samples/SAFE/__tmp_109a683c.c:142:25: error: missing terminating " character
  142 |         fprintf(stderr, "Failed to
      |                         ^~~~~~~~~~
./samples/SAFE/__tmp_109a683c.c:142:9: error: expected expression at end of input
  142 |         fprintf(stderr, "Failed to
      |         ^~~~~~~
./samples/SAFE/__tmp_109a683c.c:142:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_109a683c.c:142:9: error: expected declaration or statement at end of input
